--- a/WebApi.Jwt/packages.config
+++ b/WebApi.Jwt/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Logging" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.0.0" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.0.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net48" />
+  <package id="Microsoft.Net.Compilers" version="3.4.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net48" />
 </packages>
